--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     classpath KOTLIN_PLUGIN
     classpath VERSIONS_PLUGIN
     classpath SAFEARGS_PLUGIN
+    classpath "org.jetbrains.kotlin:kotlin-serialization:1.4.10"
   }
 }
 
