--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,14 @@ allprojects {
   tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
       jvmTarget = JavaVersion.VERSION_1_8
+
+      freeCompilerArgs = [
+          "-Xopt-in=kotlin.RequiresOptIn",
+          "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
+          "-Xopt-in=kotlinx.coroutines.FlowPreview",
+          "-Xopt-in=kotlin.ExperimentalStdlibApi",
+          "-Xopt-in=kotlinx.serialization.ExperimentalSerializationApi",
+      ]
     }
   }
 }
