--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ allprojects {
           "-Xopt-in=kotlinx.coroutines.FlowPreview",
           "-Xopt-in=kotlin.ExperimentalStdlibApi",
           "-Xopt-in=kotlinx.serialization.ExperimentalSerializationApi",
+          "-Xinline-classes",
       ]
     }
   }
