--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
   implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1"
   implementation "com.google.code.gson:gson:2.8.6"
+  implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.1.1"
 
   testImplementation JUNIT
   testImplementation TRUTH
